Add API token pagination
